--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drush-io-client",
+  "name": "@drush-io/api-client",
   "version": "1.0.0-alpha.1",
   "description": "JavaScript API client for drush.io.",
   "main": "dist/drush-io-client.js",
